projects/Always Sunny Picker/episodes/episodes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    field.cattle.io/publicEndpoints: '[{"addresses":["146.190.14.75"],"port":443,"protocol":"HTTPS","serviceName":"episodes:episodes","ingressName":"episodes:episodes-ingress","hostname":"episodes.rurich.dev","path":"/","allNodes":false}]'
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/3SQzYobMQzH30XnmclMkm2cOffYw0Khl5KDbMuJW49tLO2WEPzuxZu0DCw5Ckm//8cNMPsfVNinCDNgzrx5n6CD3z5amOEr5ZCuC0WBDhYStCgI8w0wxiQoPkVuY9K/yAiTDMWnwaBIoMGnjW+QL3rEndqZfucc9XtFrj+6SfVIx+ngJmW39gVqBwE1hQ8c5gwzUPacLDF0T/kX5AvMcLAvauusHp3RtNf2OG2Vmw5qe9yj1mpPqGgcD7apRFxoBe/tOmJbckazvmhPnMk0Y4Vy8AYZ5l0HTIGMpNIWC4q5fHsWoNYOhJYcUOjjetXk09R1pWtSFPSRCsP88wZ+wXOzWOjsWcp1sP7sBUMyhHEwadlg+INX7vktxuvmgeyZyrs3BN0d8PoWwncyheROfTTzD9qvGVBPn6qDDnIqj+f/Dl9TEZjVqMZ6qqdaa/0bAAD [...]
    objectset.rio.cattle.io/id: 6b0a383c-3ffe-48ef-9f18-ae917f18d2d5
  creationTimestamp: "2022-12-25T08:15:13Z"
  generation: 8
  labels:
    app: episodes
    objectset.rio.cattle.io/hash: 7d582fdb0fcbe4bd9128f178294abb84ea8e007d
  managedFields:
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:field.cattle.io/publicEndpoints: {}
          f:objectset.rio.cattle.io/applied: {}
          f:objectset.rio.cattle.io/id: {}
        f:labels:
          .: {}
          f:app: {}
          f:objectset.rio.cattle.io/hash: {}
      f:spec:
        f:progressDeadlineSeconds: {}
        f:replicas: {}
        f:revisionHistoryLimit: {}
        f:selector: {}
        f:strategy:
          f:rollingUpdate:
            .: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
          f:type: {}
        f:template:
          f:metadata:
            f:labels:
              .: {}
              f:app: {}
          f:spec:
            f:affinity: {}
            f:containers:
              k:{"name":"episodes"}:
                .: {}
                f:command: {}
                f:env:
                  .: {}
                  k:{"name":"PORT"}:
                    .: {}
                    f:name: {}
                    f:value: {}
                f:image: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:ports:
                  .: {}
                  k:{"containerPort":8080,"protocol":"TCP"}:
                    .: {}
                    f:containerPort: {}
                    f:name: {}
                    f:protocol: {}
                f:resources: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
            f:dnsPolicy: {}
            f:imagePullSecrets:
              .: {}
              k:{"name":"registry-always-sunny"}: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext: {}
            f:terminationGracePeriodSeconds: {}
    manager: rancher
    operation: Update
    time: "2022-12-25T08:16:07Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:deployment.kubernetes.io/revision: {}
      f:status:
        f:availableReplicas: {}
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:observedGeneration: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:updatedReplicas: {}
    manager: kube-controller-manager
    operation: Update
    subresource: status
    time: "2022-12-25T08:16:15Z"
  name: episodes-deployment
  namespace: episodes
  resourceVersion: "228270"
  uid: caeff6ed-bf74-49fa-ba06-b3d3153752cf
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: episodes
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: episodes
    spec:
      affinity: {}
      containers:
      - command:
        - node
        - ./dist/server.js
        env:
        - name: PORT
          value: "8080"
        image: registry.digitalocean.com/always-sunny/episode-service
        imagePullPolicy: Always
        name: episodes
        ports:
        - containerPort: 8080
          name: 8080tcp
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registry-always-sunny
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-12-25T08:16:19Z"
    lastUpdateTime: "2022-12-25T08:16:19Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-12-25T08:16:13Z"
    lastUpdateTime: "2022-12-25T08:16:19Z"
    message: ReplicaSet "episodes-deployment-65657cdcdf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 8
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
